# NayutaKani

./: README.md  accounts.csv  copy.txt  main.py  notes.py  pyproject.toml  rAIOm.sh  rAIOmp.sh
TRPG/: attributetrpg.py  players.csv  trpg-notes.txt
accfolder/: account.py
tools/: embeds.py
