[tool.poetry]
name = "repl_python3_discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.0.0"
flask = "^1.1.2"
pymongo = "^3.11.4"
python-dotenv = "^0.17.1"
pandas = "^1.2.4"
wikipedia = "^1.4.0"
aiosqlite = "^0.17.0"
discord-components = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
